// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests - Component - AperturaStorytelling Cases render image should return the image with picture and the different sizes for desktop and mobile 1`] = `
<div>
  <section
    class="mod-opening"
  >
    <figure
      class="mod-figure "
      role="button"
    >
      <div
        class="placeholder "
      >
        <div
          class="com-image"
        >
          <picture>
            <source
              media="(min-width: 1440px)"
              srcset="https://www.lanacion.com.ar/resizer/v2/AKQHIPLW5FD4HHXIWMT4XUSLM4.JPG?width=1920&height=1280&quality=80&smart=false"
            />
            <source
              media="(min-width: 1024px)"
              srcset="https://www.lanacion.com.ar/resizer/v2/AKQHIPLW5FD4HHXIWMT4XUSLM4.JPG?width=1200&height=800&quality=80&smart=false"
            />
            <source
              media="(min-width: 768px)"
              srcset="https://www.lanacion.com.ar/resizer/v2/AKQHIPLW5FD4HHXIWMT4XUSLM4.JPG?width=770&height=1155&quality=80&smart=false"
            />
            <img
              alt="Federico Levrino es uno de los profesionales de alto rango de Telefe"
              class="image com-image flex --cover"
              decoding="async"
              fetchpriority="high"
              loading="eager"
              src="https://www.lanacion.com.ar/resizer/v2/AKQHIPLW5FD4HHXIWMT4XUSLM4.JPG?width=420&height=630&quality=80&smart=false"
            />
          </picture>
        </div>
      </div>
      <div
        class="mod-title"
      >
        <div
          class="lay"
        >
          <h1
            class="com-title --font-primary --sixxl --font-extra"
          >
            Federico Levrino, el gran productor de Susana: de su vínculo con Maradona al día que durmió en la puerta de la casa de Zulemita
          </h1>
        </div>
      </div>
    </figure>
    <div
      class="lay"
    >
      <figcaption
        class="mod-figcaption"
      >
        <span
          class="--caption --twoxs"
        >
          Federico Levrino es uno de los profesionales de alto rango de Telefe
        </span>
        <span
          class="--credit --twoxs"
        >
          Alejandro Guyot
        </span>
      </figcaption>
    </div>
  </section>
</div>
`;

exports[`Tests - Component - AperturaStorytelling Cases render video should show image with tag picture, source and img with attributes alt, fetchpriority and loading when the device is mobile 1`] = `
<div>
  <section
    class="mod-opening"
  >
    <figure
      class="mod-figure "
      role="button"
    >
      <div
        class="placeholder "
      >
        <div
          class="com-image"
        >
          <picture>
            <source
              media="(min-width: 768px)"
              srcset="https://www.lanacion.com.ar/resizer/v2/F3DWKYXWABBLBMPV2O4M7RYTTU.jpg?width=770&height=1155&quality=80&smart=false"
            />
            <img
              alt="Trastornos de la alimentación"
              class="image com-image flex --cover"
              decoding="async"
              fetchpriority="high"
              loading="eager"
              src="https://www.lanacion.com.ar/resizer/v2/F3DWKYXWABBLBMPV2O4M7RYTTU.jpg?width=420&height=630&quality=80&smart=false"
            />
          </picture>
        </div>
      </div>
      <div
        class="mod-title"
      >
        <div
          class="lay"
        >
          <h1
            class="com-title --font-primary --sixxl --font-extra"
          >
            Trastornos de la alimentación: “Dormís con la muerte en la cama, abrazándote”
          </h1>
        </div>
      </div>
    </figure>
    <div
      class="lay"
    >
      <figcaption
        class="mod-figcaption"
      >
        <span
          class="--caption --twoxs"
        >
          Trastornos de la alimentación
        </span>
        <span
          class="--credit --twoxs"
        >
          Rodrigo Nespolo - Canon digital
        </span>
      </figcaption>
    </div>
  </section>
</div>
`;
